# ex_em_ell

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: flake_ci.yml  release.yml  update_flake.yml
ex_em_ell/: Cargo.toml  README.md
ex_em_ell/src/: errors.rs  lib.rs  traits.rs  xml_utils.rs
ex_em_ell/tests/: collections.rs  lists.rs  rename.rs  simple.rs
ex_em_ell/tests/data/collections/: empty.xml  with_data.xml
ex_em_ell/tests/data/lists/: valid_empty.xml  valid_example.xml  valid_multiple.xml
ex_em_ell/tests/data/rename/: rename_simple.xml
ex_em_ell/tests/data/simple/: valid_example.xml
ex_em_ell/tests/snapshots/: lists__example_xmls@valid_empty.xml.snap  lists__example_xmls@valid_example.xml.snap  lists__example_xmls@valid_multiple.xml.snap  rename__example_xmls.snap  simple__example_xmls.snap  simple__to_xml.snap
ex_em_ell_derive/: Cargo.toml  README.md
ex_em_ell_derive/src/: lib.rs  read.rs  write.rs
