[package]
name = "ex_em_ell"
version = "0.1.0"
edition = "2021"
description = "Provide macros for serializing and deserializing XML"
keywords = [ "xml" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amy-keibler/ex_em_ell"
homepage = "https://github.com/amy-keibler/ex_em_ell"

[dependencies]
ex_em_ell_derive = { path = "../ex_em_ell_derive", version = "0.1.0", optional = true }
thiserror = "1.0.57"
xml-rs = "0.8.19"

[features]
default = ["derive"]
derive = ["ex_em_ell_derive"]

[dev-dependencies]
insta = { version = "1.34.0", features = [ "glob" ] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[package.metadata.cyclonedx]
format = "json"
included_dependencies = "all"
output_options = { cdx = true, pattern = "package" }
