[package]
name = "ex_em_ell"
version = "0.3.0"
edition = "2021"
description = "Provide macros for serializing and deserializing XML"
keywords = [ "xml" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amy-keibler/ex_em_ell"
homepage = "https://github.com/amy-keibler/ex_em_ell"

[dependencies]
ex_em_ell_derive = { path = "../ex_em_ell_derive", version = "0.3.0", optional = true }
itertools = "0.13.0"
thiserror = "1.0.64"
xml-rs = "0.8.22"

[features]
default = ["derive"]
derive = ["ex_em_ell_derive"]

[dev-dependencies]
insta = { version = "1.36.1", features = [ "glob" ] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[package.metadata.cyclonedx]
format = "json"
included_dependencies = "all"
output_options = { cdx = true, pattern = "package" }
