[package]
name = "ex_em_ell_derive"
version = "0.1.0"
edition = "2021"
description = "Provide macros for serializing and deserializing XML (derive sub-crate)"
keywords = [ "xml" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amy-keibler/ex_em_ell"
homepage = "https://github.com/amy-keibler/ex_em_ell"

[lib]
proc_macro = true

[dependencies]
darling = "0.20.6"
heck = { version = "0.4.1", features = ["unicode"] }
itertools = "0.12.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.50", features = ["full", "extra-traits"] }


[package.metadata.cyclonedx]
format = "json"
included_dependencies = "all"
output_options = { cdx = true, pattern = "package" }
