[package]
name = "ex_em_ell_derive"
version = "0.3.0"
edition = "2021"
description = "Provide macros for serializing and deserializing XML (derive sub-crate)"
keywords = [ "xml" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amy-keibler/ex_em_ell"
homepage = "https://github.com/amy-keibler/ex_em_ell"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
heck = "0.5.0" 
itertools = "0.13.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.79", features = ["full", "extra-traits"] }


[package.metadata.cyclonedx]
format = "json"
included_dependencies = "all"
output_options = { cdx = true, pattern = "package" }
